global correlation rounding notes draft 1
haven't proved pinning lemma

--- a/refs.bib
+++ b/refs.bib
@@ -6,3 +6,13 @@
   url          = {https://www.sumofsquares.org/public/index.html},
   note         = {Lecture notes},
 }
+
+@inproceedings{BRS11,
+  title={Rounding semidefinite programming hierarchies via global correlation},
+  author={Barak, Boaz and Raghavendra, Prasad and Steurer, David},
+  booktitle={2011 IEEE 52nd annual symposium on foundations of computer science},
+  pages={472--481},
+  year={2011},
+  organization={IEEE}
+}
+
