--- a/pset2.tex
+++ b/pset2.tex
@@ -84,7 +84,7 @@
 
 \maketitle
 
-Due: 10/??, 11:59pm.
+Due: 10/8, 11:59pm.
 
 Please typeset your solutions in LaTeX.
 
@@ -104,7 +104,8 @@ Because it implies $y = \frac{z^2}{x^2+1}$, any solution $(x,y,z)$ to the above 
 \end{problem}
 
 \begin{problem}
-  Unreleased.
+  Suppose $\pE$ is a pseudoexpectation of degree $d$, with $d$ even, and $\pE \vDash p \leq 0, p \geq 0$ for some polynomial $p$. (Informally, we have been writing $\pE \vDash p = 0$.)
+  Show that for every $q$ such that the degree of $pq$ is at most $d$, we have $\pE pq = 0$.
 \end{problem}
 
 \begin{problem}
