--- a/mysty.sty
+++ b/mysty.sty
@@ -3,7 +3,7 @@
 \usepackage{enumerate}
 \usepackage{enumitem}
 \usepackage[tmargin=1in, bmargin=1in, lmargin=0.75in, rmargin=0.75in]{geometry}
-\usepackage[colorlinks]{hyperref}
+\usepackage[colorlinks,citecolor={purple}]{hyperref}
 \usepackage{pgf,tikz}
 \usepackage{cleveref}
 \usetikzlibrary{arrows,automata}
