--- a/refs.bib
+++ b/refs.bib
@@ -10,9 +10,26 @@
 @inproceedings{BRS11,
   title={Rounding semidefinite programming hierarchies via global correlation},
   author={Barak, Boaz and Raghavendra, Prasad and Steurer, David},
-  booktitle={2011 IEEE 52nd annual symposium on foundations of computer science},
+  booktitle={2011 IEEE 52nd Annual Symposium on Foundations of Computer Science},
   pages={472--481},
   year={2011},
   organization={IEEE}
 }
 
+@inproceedings{GS12,
+  title={Faster SDP hierarchy solvers for local rounding algorithms},
+  author={Guruswami, Venkatesan and Sinop, Ali Kemal},
+  booktitle={2012 IEEE 53rd Annual Symposium on Foundations of Computer Science},
+  pages={197--206},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{OGT13,
+  title={A new regularity lemma and faster approximation algorithms for low threshold rank graphs},
+  author={Oveis Gharan, Shayan and Trevisan, Luca},
+  booktitle={International Workshop on Approximation Algorithms for Combinatorial Optimization},
+  pages={303--316},
+  year={2013},
+  organization={Springer}
+}
