update project tex

--- a/project.tex
+++ b/project.tex
@@ -84,12 +84,13 @@
 
 \maketitle
 
-The course project is an opportunity for you to dive deeper into the SoS research literature, make connections to your own research, and more! There is a great deal of flexibility in choosing your project. However, I need to approve all the project topics before you embark on them! I expect you to schedule a discussion of your project with me before the end of October. You may (but are not required to!) work with a partner on your project.
+The course project is an opportunity for you to dive deeper into the SoS research literature, make connections to your own research, and more! There is a great deal of flexibility in choosing your project.
+You may (but are not required to!) work with a partner on your project.
 
 \paragraph{Possible approaches to the project}
 You could:
 \begin{itemize}
-\item Formulate a research question related to the course (and possibly also related to your main area of research) and investigate it.
+\item Formulate a research question related to the course (and possibly also related to your main area of research) and begin a preliminary investigation of it.
 \item Read one or more papers from the SoS literature and write an exposition of them at a level understandable by the students of 6.S977. Optionally, extend one or more of the result in these papers.
 \item Implement one or more algorithms from the SoS literature and study their performance empirically.
 \item Combinations of any of the above.
@@ -97,10 +98,16 @@ You could:
 
 None of these options are preferred above others -- in particular, original research is not a requirement for a successful project. (That said, it does of course carry many potential rewards --  it is not uncommon for MIT course projects to end up as published papers!)
 
+Paraphrasing Prasad Raghavendra: there are no wrong questions, and your question does not need to be new. But you should be able to make the case to your peers that it is interesting!
+
+You can find a brainstormed list of papers which could serve as starting points here, in the ``course project'' section: \url{https://www.samuelbhopkins.com/teaching/sos-fall-22/sos-fall-22.html}.
+However, I encourage you to think about topics on your own for a while before looking at the list.
+
 \paragraph{Deliverables}
-You should produce a written report on your project activities. For expository projects, this report is your exposition. For research projects, this document should discuss the research problem you decided to investigate, why it merits your attention, how it relates to the subject of the course, and your findings.
-
-Reports may vary in length, but when grading, I promise to read the first 10 pages of your report (typeset in a reasonable font with reasonable margins). I will read further material at my discretion.
-
-
+There are three deliverables:
+\begin{enumerate}
+\item By November 5, an email to me with a project proposal. The proposal should be 1-2 paragraphs, describing a topic you will investigate and the first few steps you will atke.
+\item In the last week of classes, a 15 minute presentation delivered to your peers (and to me).
+\item A written report on your project activities. For expository projects, this report is your exposition. For research projects, this document should discuss the research problem you decided to investigate, why it merits your attention, how it relates to the subject of the course, and your findings. Due December 11.
+\end{enumerate}
 \end{document}
